# space_game

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  pyproject.toml
animations/: fire.py  spaceship.py  star.py
game/: constants.py  main.py
game/animations/: __init__.py  frame.py  spaceship.py
game/controls/: controls.py
