[tool.poetry]
name = "async-game"
version = "0.1.0"
description = ""
authors = ["Alexey Vatolin <vatolinalex@gmail.com>"]
readme = "README.md"
packages = [{include = "async_game"}]

[tool.poetry.dependencies]
python = "^3.10"
flakeheaven = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.981"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pyupgrade = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 99
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 99

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.flakeheaven]
exclude = ["*.md"]
format = "grouped"
max_line_length = 99

[tool.flakeheaven.plugins]
pycodestyle = ["--max_line_length=99"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.10
pretty = true
show_traceback = true
color_output = true

implicit_reexport = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "transformers"
implicit_reexport = true
